# lightclient-lssue

./: Cargo.toml
artifacts/: polkadot_metadata_full.scale
src/: main.rs  parachain_chainspec.rs  relaychain_chainspec.rs
